fix(50-50): removed extra margins

--- a/components/50-50/50-50.less
+++ b/components/50-50/50-50.less
@@ -76,20 +76,3 @@ h2.fifty-fifty-title {
 		}
 	}
 }
-
-.fifty-fifty-margin-medium {
-	margin-bottom: 25px; 
-	@media @screen-medium {
-		margin-bottom: 110px;
-	}
-}
-.fifty-fifty-margin-large { 
-	margin-bottom: 25px; 
-	@media @screen-medium {
-		margin-bottom: 170px;
-	}
-}
-
-.fifty-fifty-margin-top {
-	margin-top: 50px;
-}
